// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`package file apply bump (snapshot) on js bumps multi 1`] = `
Object {
  "consoleDir": Array [],
  "consoleLog": Array [
    Array [
      "bumping yarn-workspace-base-pkg-a with minor",
    ],
    Array [
      "bumping yarn-workspace-base-pkg-b with minor",
    ],
    Array [
      "bumping all with minor",
    ],
  ],
}
`;

exports[`package file apply bump (snapshot) on js bumps multi with parent as range 1`] = `
Object {
  "consoleDir": Array [],
  "consoleLog": Array [
    Array [
      "bumping yarn-workspace-base-pkg-a with minor",
    ],
    Array [
      "bumping yarn-workspace-base-pkg-b with minor",
    ],
    Array [
      "bumping all with minor",
    ],
  ],
}
`;

exports[`package file apply bump (snapshot) on js bumps single 1`] = `
Object {
  "consoleDir": Array [],
  "consoleLog": Array [
    Array [
      "bumping js-single-json-fixture with minor",
    ],
  ],
}
`;

exports[`package file apply bump (snapshot) on js fails bump single that satisfies range 1`] = `
Object {
  "consoleDir": Array [],
  "consoleLog": Array [
    Array [
      "bumping js-single-json-fixture with minor",
    ],
  ],
}
`;

exports[`package file apply bump (snapshot) on rust bump multi as patch with object dep missing patch 1`] = `
Object {
  "consoleDir": Array [],
  "consoleLog": Array [
    Array [
      "bumping rust_pkg_a_fixture with patch",
    ],
    Array [
      "bumping rust_pkg_b_fixture with patch",
    ],
  ],
}
`;

exports[`package file apply bump (snapshot) on rust bumps multi 1`] = `
Object {
  "consoleDir": Array [],
  "consoleLog": Array [
    Array [
      "bumping rust_pkg_a_fixture with minor",
    ],
    Array [
      "bumping rust_pkg_b_fixture with minor",
    ],
  ],
}
`;

exports[`package file apply bump (snapshot) on rust bumps multi as minor with object dep missing patch 1`] = `
Object {
  "consoleDir": Array [],
  "consoleLog": Array [
    Array [
      "bumping rust_pkg_a_fixture with minor",
    ],
    Array [
      "bumping rust_pkg_b_fixture with minor",
    ],
  ],
}
`;

exports[`package file apply bump (snapshot) on rust bumps multi with dep missing patch 1`] = `
Object {
  "consoleDir": Array [],
  "consoleLog": Array [
    Array [
      "bumping rust_pkg_a_fixture with minor",
    ],
    Array [
      "bumping rust_pkg_b_fixture with minor",
    ],
  ],
}
`;

exports[`package file apply bump (snapshot) on rust bumps multi with object dep 1`] = `
Object {
  "consoleDir": Array [],
  "consoleLog": Array [
    Array [
      "bumping rust_pkg_a_fixture with minor",
    ],
    Array [
      "bumping rust_pkg_b_fixture with minor",
    ],
  ],
}
`;

exports[`package file apply bump (snapshot) on rust bumps single 1`] = `
Object {
  "consoleDir": Array [],
  "consoleLog": Array [
    Array [
      "bumping rust-single-fixture with minor",
    ],
  ],
}
`;

exports[`package file apply bump (snapshot) on rust fails bumps single that satisfies range 1`] = `
Object {
  "consoleDir": Array [],
  "consoleLog": Array [
    Array [
      "bumping rust-single-fixture with minor",
    ],
  ],
}
`;

exports[`package file apply bump (snapshot) on yaml bumps single 1`] = `
Object {
  "consoleDir": Array [],
  "consoleLog": Array [
    Array [
      "bumping test_app with minor",
    ],
  ],
}
`;
